chore: fix content2 on mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -44,6 +44,7 @@
 .content2 {
   margin: 16% auto;
   padding: 4em 6em;
+  max-width: 55%;
   width: fit-content;
   background-color: #ffffff;
   font-size: 18px;
@@ -83,6 +84,24 @@
   filter: drop-shadow(0 0 4px #00000040);
 }
 
+@media screen and (width < 1400px) {
+  .content2 {
+    max-width: 60%;
+  }
+}
+
+@media screen and (width < 1280px) {
+  .content2 {
+    max-width: 70%;
+  }
+}
+
+@media screen and (width < 1024px) {
+  .content2 {
+    max-width: 85%;
+  }
+}
+
 @media screen and (width < 768px) {
   .content1 {
     margin-top: 105%;
@@ -101,5 +120,6 @@
   .content2 {
     margin: 25% auto;
     padding: 2em 1em;
+    max-width: 100%;
   }
 }
